# chinchudo

./: .env.example  .gitignore  .mcp.json  AGENTS.md  PLAN_DESARROLLO.md  README.md  implementation_plan.md  next.config.mjs  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vitest.config.ts
.codex/: config.toml
agents/: _browser.py  _cdp.py  _config.py  _log.py  _login.py  _retry.py  _runtime.py  accounts.example.json  agente_4_nurture.py  agente_browser_cdp.py  agente_distribucion.py  agente_geo_audit.py  agente_lead_magnets.py  agente_publicacion.py  browser-cdp.py  build_kressmer_landings.py  db_pg.py  generate_kressmer_intent_landings.py  generate_kressmer_jsonl.py  orchestrator.py  publisher.py  render-avatar-local.py  social-listen.py  trend-listen.py  warmup.py
backups/: dev-20260623-151139.db
landing-build/: build_landings.py  swarm.py  vercel.json
lib/: mailer.py  nurture_pg.py
prisma/: schema.prisma  seed.ts
scratch/: backfill-persona-voices.mjs  check-client-keys.mjs  check-client-personas.mjs  check-did-job.cjs  check-did-job.js  check-did-job.mjs  check-direct-clientId.mjs  check-opportunities-with-drafts.mjs  check-opps-and-sources.mjs  check-orphaned-records.mjs  check-pending-opportunities.mjs  check-products.mjs  check-recent-errors.mjs  check-recent-reports.mjs  check-scripts.js  check-scripts.mjs  count-products.mjs  import-engagement-catalog.mjs  list-users.mjs  query-db.mjs  query-invisible.mjs  query-sources.mjs  test-unsplash.cjs
scripts/: agent-relay.mjs  agent-utils.mjs  audit-cross-client.mts  (+37 more)
(+222 files in other folders)
