[project]
name = "pcmidi-suite"
version = "0.1.0"
description = "Sistema unificado PC MIDI Center: social listening, landings SEO, nurturing y análisis GEO."
requires-python = ">=3.11"
dependencies = [
  # IA / LLM
  "litellm>=1.60.0",
  "httpx>=0.27.0",
  # DB
  "psycopg[binary]>=3.3.0",
  # Web frameworks (agentes locales)
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
  "flask>=3.0.0",
  # Templates / build landings
  "jinja2>=3.1.0",
  "markdown>=3.5.0",
  # Redes sociales
  "praw>=7.8.1",
  "tweepy>=4.14.0",
  # Scraping / feeds
  "feedparser>=6.0.11",
  "ddgs>=9.0.0",
  # Config / CLI
  "python-dotenv>=1.0.1",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "rich>=13.9.0",
  "typer>=0.15.0",
  "python-multipart>=0.0.20",
  "requests>=2.32.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
scraping = ["scrapling>=0.4.8"]

[project.scripts]
pcmidi = "agents.orchestrator:main"
landing-swarm = "landing_build.swarm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "lib", "landing_build"]
